--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -1,3 +1,174 @@
+@keyframes apparition {
+  0% {
+    transform: scale(0);
+    opacity: 0%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 100%;
+  }
+}
+.delay-1 {
+  transition-delay: 0.1s;
+}
+
+.delay-2 {
+  transition-delay: 0.2s;
+}
+
+.delay-3 {
+  transition-delay: 0.3s;
+}
+
+.delay-4 {
+  transition-delay: 0.4s;
+}
+
+.delay-5 {
+  transition-delay: 0.5s;
+}
+
+.delay-6 {
+  transition-delay: 0.6s;
+}
+
+.delay-7 {
+  transition-delay: 0.7s;
+}
+
+.delay-8 {
+  transition-delay: 0.8s;
+}
+
+.delay-9 {
+  transition-delay: 0.9s;
+}
+
+.delay-10 {
+  transition-delay: 0.1s;
+}
+
+@keyframes rotate {
+  from {
+    -webkit-transform: rotation 0deg;
+  }
+  to {
+    -webkit-transform: rotation 360deg;
+  }
+}
+@keyframes apparition {
+  0% {
+    transform: scale(0);
+    opacity: 0%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 100%;
+  }
+}
+.delay-1 {
+  transition-delay: 0.1s;
+}
+
+.delay-2 {
+  transition-delay: 0.2s;
+}
+
+.delay-3 {
+  transition-delay: 0.3s;
+}
+
+.delay-4 {
+  transition-delay: 0.4s;
+}
+
+.delay-5 {
+  transition-delay: 0.5s;
+}
+
+.delay-6 {
+  transition-delay: 0.6s;
+}
+
+.delay-7 {
+  transition-delay: 0.7s;
+}
+
+.delay-8 {
+  transition-delay: 0.8s;
+}
+
+.delay-9 {
+  transition-delay: 0.9s;
+}
+
+.delay-10 {
+  transition-delay: 0.1s;
+}
+
+@keyframes rotate {
+  from {
+    -webkit-transform: rotation 0deg;
+  }
+  to {
+    -webkit-transform: rotation 360deg;
+  }
+}
+.loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  animation: loader 3s forwards;
+}
+
+/*Animation loader*/
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
+.loader__circle {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #00001d;
+  border-bottom: 10px solid blue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 3s linear forwards;
+  /*Placement du loader au milieu de la page*/
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+/*Animation du loader circle*/
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
 footer {
   background-color: #3b3b3b;
   margin-top: 50px;
@@ -296,6 +467,7 @@ body a {
   position: absolute;
   right: 20px;
   bottom: 30px;
+  opacity: 0.2;
 }
 .restaurantssection .menu1et2 .coeur:hover,
 .restaurantssection .menu3et4 .coeur:hover {
@@ -304,7 +476,8 @@ body a {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   /* pour mettre le contour du coeur en transparent */
-  animation: fill 0.3s ease-in-out;
+  transition: all 2s ease-in-out;
+  opacity: 1;
 }
 
 @media screen and (min-width: 1024px) {
