--- a/sass/css/menu.css
+++ b/sass/css/menu.css
@@ -1,3 +1,204 @@
+@keyframes apparition {
+  0% {
+    transform: scale(0);
+    opacity: 0%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 100%;
+  }
+}
+.delay-1 {
+  transition-delay: 0.1s;
+}
+
+.delay-2 {
+  transition-delay: 0.2s;
+}
+
+.delay-3 {
+  transition-delay: 0.3s;
+}
+
+.delay-4 {
+  transition-delay: 0.4s;
+}
+
+.delay-5 {
+  transition-delay: 0.5s;
+}
+
+.delay-6 {
+  transition-delay: 0.6s;
+}
+
+.delay-7 {
+  transition-delay: 0.7s;
+}
+
+.delay-8 {
+  transition-delay: 0.8s;
+}
+
+.delay-9 {
+  transition-delay: 0.9s;
+}
+
+.delay-10 {
+  transition-delay: 0.1s;
+}
+
+@keyframes fill {
+  /*  aniimation pour le coeur*/
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes rotate {
+  from {
+    -webkit-transform: rotation 0deg;
+  }
+  to {
+    -webkit-transform: rotation 360deg;
+  }
+}
+@keyframes apparition {
+  0% {
+    transform: scale(0);
+    opacity: 0%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 100%;
+  }
+}
+.delay-1 {
+  transition-delay: 0.1s;
+}
+
+.delay-2 {
+  transition-delay: 0.2s;
+}
+
+.delay-3 {
+  transition-delay: 0.3s;
+}
+
+.delay-4 {
+  transition-delay: 0.4s;
+}
+
+.delay-5 {
+  transition-delay: 0.5s;
+}
+
+.delay-6 {
+  transition-delay: 0.6s;
+}
+
+.delay-7 {
+  transition-delay: 0.7s;
+}
+
+.delay-8 {
+  transition-delay: 0.8s;
+}
+
+.delay-9 {
+  transition-delay: 0.9s;
+}
+
+.delay-10 {
+  transition-delay: 0.1s;
+}
+
+@keyframes fill {
+  /*  aniimation pour le coeur*/
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes rotate {
+  from {
+    -webkit-transform: rotation 0deg;
+  }
+  to {
+    -webkit-transform: rotation 360deg;
+  }
+}
+.loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  animation: loader 3s forwards;
+}
+
+/*Animation loader*/
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
+.loader__circle {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #00001d;
+  border-bottom: 10px solid blue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 3s linear forwards;
+  /*Placement du loader au milieu de la page*/
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+/*Animation du loader circle*/
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
 footer {
   background-color: #3b3b3b;
   margin-top: 50px;
@@ -29,76 +230,53 @@ footer li a {
   text-align: center;
 }
 
-@keyframes apparition {
+.loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  animation: loader 3s forwards;
+}
+
+/*Animation loader*/
+@keyframes loader {
   0% {
-    transform: scale(0);
-    opacity: 0%;
-  }
-  50% {
-    opacity: 0%;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 100%;
-  }
-}
-.delay-1 {
-  transition-delay: .1s;
-}
-
-.delay-2 {
-  transition-delay: .2s;
-}
-
-.delay-3 {
-  transition-delay: .3s;
-}
-
-.delay-4 {
-  transition-delay: .4s;
-}
-
-.delay-5 {
-  transition-delay: .5s;
-}
-
-.delay-6 {
-  transition-delay: .6s;
-}
-
-.delay-7 {
-  transition-delay: .7s;
-}
-
-.delay-8 {
-  transition-delay: .8s;
-}
-
-.delay-9 {
-  transition-delay: .9s;
-}
-
-.delay-10 {
-  transition-delay: .10s;
-}
-
-@keyframes fill {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0, 5;
-  }
-  100% {
     opacity: 1;
   }
-}
-@keyframes rotate {
-  from {
-    -webkit-transform: rotation 0deg;
+  100% {
+    opacity: 0;
+    z-index: -10;
   }
-  to {
-    -webkit-transform: rotation 360deg;
+}
+.loader__circle {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #00001d;
+  border-bottom: 10px solid blue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 3s linear forwards;
+  /*Placement du loader au milieu de la page*/
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+/*Animation du loader circle*/
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
   }
 }
 body {
@@ -171,17 +349,16 @@ main .main-titre-coeur h1 {
 main .main-titre-coeur .far {
   font-size: 30px;
   cursor: pointer;
+  opacity: 0.2;
 }
 main .main-titre-coeur .far:hover {
   font-weight: bold;
-  background: -webkit-linear-gradient(#9356dc, #ff79da 50%);
-  background-clip:text;
-  -webkit-background-clip: text;
-  color: transparent;
+  background: linear-gradient(to bottom right, #ff79da, #9356dc);
+  background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-position-y: 1.8rem;
-  cursor: pointer;
-  animation: fill 0.3s ease-in-out;
+  /* pour mettre le contour du coeur en transparent */
+  transition: all 2s ease-in-out;
+  opacity: 1;
 }
 main .section-entree,
 main .section-plat,
