--- a/sass/css/menu.css
+++ b/sass/css/menu.css
@@ -51,21 +51,6 @@
   transition-delay: 0.1s;
 }
 
-@keyframes fill {
-  /*  aniimation pour le coeur*/
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 0.3;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @keyframes rotate {
   from {
     -webkit-transform: rotation 0deg;
@@ -127,21 +112,6 @@
   transition-delay: 0.1s;
 }
 
-@keyframes fill {
-  /*  aniimation pour le coeur*/
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 0.3;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @keyframes rotate {
   from {
     -webkit-transform: rotation 0deg;
@@ -529,6 +499,13 @@ main .button a {
     width: 100%;
     align-items: center;
     justify-content: center;
+  }
+  main .main-titre-coeur h1 {
+    font-size: 28px;
+    margin-right: 30px;
+  }
+  main .main-titre-coeur .far {
+    font-size: 32px;
   }
   main .article {
     flex-direction: column;
