--- a/sass/sass/menu.scss
+++ b/sass/sass/menu.scss
@@ -164,6 +164,15 @@ main {
       width: 100%;
       align-items: center;
       justify-content: center;
+
+      h1 {
+        font-size: 28px;
+        margin-right: 30px;
+      }
+
+      .far {
+        font-size: 32px;
+      }
     }
     .article {
       flex-direction: column;
