--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -1,54 +1,102 @@
-@keyframes apparition {
+
+
+@-webkit-keyframes apparition {
   0% {
-    transform: scale(0);
+    -webkit-transform: scale(0);
+            transform: scale(0);
     opacity: 0%;
   }
   50% {
     opacity: 50%;
   }
   100% {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 100%;
+  }
+}
+@keyframes apparition {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 100%;
   }
 }
 .delay-1 {
-  transition-delay: 0.1s;
+  -webkit-transition-delay: 0.1s;
+       -o-transition-delay: 0.1s;
+          transition-delay: 0.1s;
 }
 
 .delay-2 {
-  transition-delay: 0.2s;
+  -webkit-transition-delay: 0.2s;
+       -o-transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
 
 .delay-3 {
-  transition-delay: 0.3s;
+  -webkit-transition-delay: 0.3s;
+       -o-transition-delay: 0.3s;
+          transition-delay: 0.3s;
 }
 
 .delay-4 {
-  transition-delay: 0.4s;
+  -webkit-transition-delay: 0.4s;
+       -o-transition-delay: 0.4s;
+          transition-delay: 0.4s;
 }
 
 .delay-5 {
-  transition-delay: 0.5s;
+  -webkit-transition-delay: 0.5s;
+       -o-transition-delay: 0.5s;
+          transition-delay: 0.5s;
 }
 
 .delay-6 {
-  transition-delay: 0.6s;
+  -webkit-transition-delay: 0.6s;
+       -o-transition-delay: 0.6s;
+          transition-delay: 0.6s;
 }
 
 .delay-7 {
-  transition-delay: 0.7s;
+  -webkit-transition-delay: 0.7s;
+       -o-transition-delay: 0.7s;
+          transition-delay: 0.7s;
 }
 
 .delay-8 {
-  transition-delay: 0.8s;
+  -webkit-transition-delay: 0.8s;
+       -o-transition-delay: 0.8s;
+          transition-delay: 0.8s;
 }
 
 .delay-9 {
-  transition-delay: 0.9s;
+  -webkit-transition-delay: 0.9s;
+       -o-transition-delay: 0.9s;
+          transition-delay: 0.9s;
 }
 
 .delay-10 {
-  transition-delay: 0.1s;
+  -webkit-transition-delay: 0.1s;
+       -o-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotation 0deg;
+  }
+  to {
+    -webkit-transform: rotation 360deg;
+  }
 }
 
 @keyframes rotate {
@@ -61,55 +109,77 @@
 }
 @keyframes apparition {
   0% {
-    transform: scale(0);
+    -webkit-transform: scale(0);
+            transform: scale(0);
     opacity: 0%;
   }
   50% {
     opacity: 50%;
   }
   100% {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 100%;
   }
 }
 .delay-1 {
-  transition-delay: 0.1s;
+  -webkit-transition-delay: 0.1s;
+       -o-transition-delay: 0.1s;
+          transition-delay: 0.1s;
 }
 
 .delay-2 {
-  transition-delay: 0.2s;
+  -webkit-transition-delay: 0.2s;
+       -o-transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
 
 .delay-3 {
-  transition-delay: 0.3s;
+  -webkit-transition-delay: 0.3s;
+       -o-transition-delay: 0.3s;
+          transition-delay: 0.3s;
 }
 
 .delay-4 {
-  transition-delay: 0.4s;
+  -webkit-transition-delay: 0.4s;
+       -o-transition-delay: 0.4s;
+          transition-delay: 0.4s;
 }
 
 .delay-5 {
-  transition-delay: 0.5s;
+  -webkit-transition-delay: 0.5s;
+       -o-transition-delay: 0.5s;
+          transition-delay: 0.5s;
 }
 
 .delay-6 {
-  transition-delay: 0.6s;
+  -webkit-transition-delay: 0.6s;
+       -o-transition-delay: 0.6s;
+          transition-delay: 0.6s;
 }
 
 .delay-7 {
-  transition-delay: 0.7s;
+  -webkit-transition-delay: 0.7s;
+       -o-transition-delay: 0.7s;
+          transition-delay: 0.7s;
 }
 
 .delay-8 {
-  transition-delay: 0.8s;
+  -webkit-transition-delay: 0.8s;
+       -o-transition-delay: 0.8s;
+          transition-delay: 0.8s;
 }
 
 .delay-9 {
-  transition-delay: 0.9s;
+  -webkit-transition-delay: 0.9s;
+       -o-transition-delay: 0.9s;
+          transition-delay: 0.9s;
 }
 
 .delay-10 {
-  transition-delay: 0.1s;
+  -webkit-transition-delay: 0.1s;
+       -o-transition-delay: 0.1s;
+          transition-delay: 0.1s;
 }
 
 @keyframes rotate {
@@ -128,10 +198,20 @@
   left: 0;
   top: 0;
   z-index: 10000;
-  animation: loader 3s forwards;
+  -webkit-animation: loader 3s forwards;
+          animation: loader 3s forwards;
 }
 
 /*Animation loader*/
+@-webkit-keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
 @keyframes loader {
   0% {
     opacity: 1;
@@ -148,7 +228,8 @@
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  animation: spin 3s linear forwards;
+  -webkit-animation: spin 3s linear forwards;
+          animation: spin 3s linear forwards;
   /*Placement du loader au milieu de la page*/
   margin: auto;
   position: absolute;
@@ -159,13 +240,27 @@
 }
 
 /*Animation du loader circle*/
-@keyframes spin {
+@-webkit-keyframes spin {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
     opacity: 1;
   }
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
     opacity: 0;
   }
 }
@@ -208,7 +303,8 @@ footer li a {
   left: 0;
   top: 0;
   z-index: 10000;
-  animation: loader 3s forwards;
+  -webkit-animation: loader 3s forwards;
+          animation: loader 3s forwards;
 }
 
 /*Animation loader*/
@@ -228,7 +324,8 @@ footer li a {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  animation: spin 3s linear forwards;
+  -webkit-animation: spin 3s linear forwards;
+          animation: spin 3s linear forwards;
   /*Placement du loader au milieu de la page*/
   margin: auto;
   position: absolute;
@@ -241,11 +338,13 @@ footer li a {
 /*Animation du loader circle*/
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
     opacity: 1;
   }
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
     opacity: 0;
   }
 }
@@ -254,9 +353,15 @@ header p {
   font-size: 22px;
   margin: 0px;
   margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 body {
@@ -268,12 +373,21 @@ body a {
 }
 
 .localisation {
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   background-color: #f0f0f0;
   margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .localisation .maps {
   margin-right: 10px;
@@ -282,10 +396,19 @@ body a {
 .reservationsection {
   margin: 0;
   background-color: #f8f8f8;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .reservationsection h1 {
   margin: 0px 50px;
@@ -295,13 +418,21 @@ body a {
   font-family: "Roboto", sans-serif;
 }
 .reservationsection p {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   margin: 20px;
 }
 .reservationsection .reservationsection-btn {
+  background: -webkit-gradient(linear, left top, right bottom, from(#ff79da), to(#9356dc));
+  background: -o-linear-gradient(top left, #ff79da, #9356dc);
   background: linear-gradient(to bottom right, #ff79da, #9356dc);
   border: none;
   border-radius: 25px;
@@ -310,9 +441,15 @@ body a {
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
   width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .reservationsection .reservationsection-btn a {
   color: white;
@@ -320,8 +457,13 @@ body a {
 }
 
 .fonctionnementsection {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .fonctionnementsection h1 {
   margin-left: 20px;
@@ -329,15 +471,25 @@ body a {
   font-family: "Roboto", sans-serif;
 }
 .fonctionnementsection .fonctionnementsection-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   background-color: white;
   margin: 10px 30px 10px 35px;
   padding: 30px 10px 30px 0px;
   border-radius: 25px;
-  box-shadow: 6px 8px 17px 0px #e7e6e6;
+  -webkit-box-shadow: 6px 8px 17px 0px #e7e6e6;
+          box-shadow: 6px 8px 17px 0px #e7e6e6;
   width: auto;
   position: relative;
 }
@@ -352,7 +504,9 @@ body a {
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 .fonctionnementsection .fonctionnementsection-div .p-phone {
   margin: 0px;
@@ -361,13 +515,17 @@ body a {
   padding: 4px 8px 4px 8px;
   width: 10px;
   color: white;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   position: absolute;
   left: -10px;
   top: 30px;
 }
 .fonctionnementsection .fonctionnementsection-div .phone {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin-left: 20px;
   margin-right: 10px;
 }
@@ -378,13 +536,17 @@ body a {
   padding: 4px 8px 4px 8px;
   width: 10px;
   color: white;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   position: absolute;
   left: -10px;
   top: 30px;
 }
 .fonctionnementsection .fonctionnementsection-div .liste {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -395,13 +557,17 @@ body a {
   padding: 4px 8px 4px 8px;
   width: 10px;
   color: white;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   position: absolute;
   left: -10px;
   top: 30px;
 }
 .fonctionnementsection .fonctionnementsection-div .store {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin-left: 15px;
   margin-right: 10px;
 }
@@ -421,7 +587,8 @@ body a {
   margin-left: 15px;
   border-radius: 20px;
   margin-bottom: 30px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   position: relative;
 }
 .restaurantssection .menu1et2 h3,
@@ -443,12 +610,15 @@ body a {
   width: 100%;
   height: 256.7px;
   border-radius: 20px 20px 0 0;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .restaurantssection .menu1et2 .menu1et2-div,
 .restaurantssection .menu1et2 .menu3et4-div,
 .restaurantssection .menu3et4 .menu1et2-div,
 .restaurantssection .menu3et4 .menu3et4-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .restaurantssection .menu1et2 .menu1et2-nouveau,
@@ -472,20 +642,34 @@ body a {
 .restaurantssection .menu1et2 .coeur:hover,
 .restaurantssection .menu3et4 .coeur:hover {
   font-weight: bold;
+  background: -webkit-gradient(linear, left top, right bottom, from(#ff79da), to(#9356dc));
+  background: -o-linear-gradient(top left, #ff79da, #9356dc);
   background: linear-gradient(to bottom right, #ff79da, #9356dc);
-  background-clip: text;
+  -webkit-background-clip: text;
+          background-clip: text;
   -webkit-text-fill-color: transparent;
   /* pour mettre le contour du coeur en transparent */
+  -webkit-transition: all 2s ease-in-out;
+  -o-transition: all 2s ease-in-out;
   transition: all 2s ease-in-out;
   opacity: 1;
 }
 
 @media screen and (min-width: 1024px) {
   .fonctionnementsection {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .fonctionnementsection h1 {
     margin-left: 20px;
@@ -493,28 +677,47 @@ body a {
     font-family: "Roboto", sans-serif;
   }
   .fonctionnementsection .fonctionnementsection-div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     background-color: white;
     margin: 10px 30px 10px 35px;
     padding: 30px 10px 30px 0px;
     border-radius: 25px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     width: 30%;
     position: relative;
   }
 
   .restaurantssection {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .restaurantssection h2 {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .restaurantssection .menu1et2,
 .restaurantssection .menu3et4 {
@@ -529,7 +732,8 @@ body a {
     width: 100%;
     height: auto;
     border-radius: 20px 20px 0 0;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .restaurantssection .menu1et2 .image2,
 .restaurantssection .menu3et4 .image2 {
@@ -538,10 +742,19 @@ body a {
   }
 
   footer {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   footer h2 {
     margin-left: 0px;
@@ -553,16 +766,29 @@ body a {
 }
 @media screen and (min-width: 500px) and (max-width: 1023px) {
   .restaurantssection {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .restaurantssection h2 {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .restaurantssection .menu1et2,
 .restaurantssection .menu3et4 {
@@ -577,14 +803,24 @@ body a {
     width: 100%;
     height: 256.7px;
     border-radius: 20px 20px 0 0;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 
   footer {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   footer h2 {
     margin-left: 0px;
@@ -593,4 +829,4 @@ body a {
   footer li {
     margin-left: 0px;
   }
-}/*# sourceMappingURL=main.css.map */
+}
