--- a/sass/sass/menu.scss
+++ b/sass/sass/menu.scss
@@ -68,18 +68,7 @@ main {
     }
 
     .far {
-      font-size: 30px;
-      cursor: pointer;
-      opacity: 0.2;
-
-      &:hover {
-        font-weight: bold;
-        background: $gradient;
-        background-clip: text;
-        -webkit-text-fill-color: transparent; /* pour mettre le contour du coeur en transparent */
-        transition: all 2s ease-in-out;
-        opacity: 1;
-      }
+      @include coeur;
     }
   }
 
